[package]
name = "redstone-signal"
version = "0.0.1"
edition = "2021"
license = "copyleft"
description = "In spec implementation of the minecraft protocol"
authors = ["arthurbr@cdmd.dev"]
categories = ["game", "networking", "minecraft", "protocol"]
keywords = ["game", "networking", "minecraft", "protocol"]
documentation = "wiki.vg/Protocol"
repository = "https://github.com/Ar7hurz1nh0/redstone"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4"], default-features = false }
quartz_nbt = "0.2"
thiserror = "1.0.61"
